test/data/syntax-errors/hanging-parentheses.jen
if ()))):
    print("parentheses must be balanced")
